# UNetBrainTumorSeg

./: CMakeLists.txt  LICENSE  README.md  seg_module.py
notebooks/: Preprocess_BraTS20 .ipynb  UNet_3D.ipynb
seg_module/: CMakeLists.txt
seg_module/Resources/UI/: seg_module.ui
